--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "noctua-vulture",
-  "version": "1.0.1",
-  "description": "noctua man in the middle base system",
+  "version": "2.0.0",
+  "description": "noctua man in the middle",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -18,6 +18,16 @@
     "url": "https://github.com/niosz/noctua-vulture/issues"
   },
   "homepage": "https://github.com/niosz/noctua-vulture#readme",
+  "dependencies": {
+    "async": "^3.2.4",
+    "debug": "^4.3.4",
+    "mkdirp": "^3.0.0",
+    "node-forge": "^1.3.1",
+    "semaphore": "^1.1.0",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0",
+    "yargs": "^17.7.1"
+  },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
@@ -26,19 +36,9 @@
     "node-static": "^0.7.11",
     "prettier": "^2.8.7",
     "request": "^2.88.2",
-    "rimraf": "^4.4.1",
+    "rimraf": "^5.0.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
-  },
-  "dependencies": {
-    "async": "^3.2.4",
-    "debug": "^4.3.4",
-    "mkdirp": "^2.1.6",
-    "node-forge": "^1.3.1",
-    "semaphore": "^1.1.0",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0",
-    "yargs": "^17.7.1"
+    "typescript": "^5.0.4"
   }
 }
