--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "noctua-vulture",
-  "version": "2.0.3",
+  "version": "3.1.0",
   "description": "noctua man in the middle",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "clear": "rimraf dist && rimraf package-lock.json && rimraf node_modules",
     "build": "rimraf dist && tsc",
     "prepare": "npm run build"
   },
@@ -18,27 +19,28 @@
     "url": "https://github.com/niosz/noctua-vulture/issues"
   },
   "homepage": "https://github.com/niosz/noctua-vulture#readme",
+  "devDependencies": {
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.7.5",
+    "@types/ws": "^8.5.12",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.7.3",
+    "node-static": "^0.7.11",
+    "prettier": "^3.3.3",
+    "request": "^2.88.2",
+    "rimraf": "^6.0.1",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
   "dependencies": {
-    "async": "^3.2.4",
-    "debug": "^4.3.4",
-    "mkdirp": "^3.0.0",
+    "async": "^3.2.6",
+    "debug": "^4.3.7",
+    "mkdirp": "^3.0.1",
     "node-forge": "^1.3.1",
     "semaphore": "^1.1.0",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0",
-    "yargs": "^17.7.1"
-  },
-  "devDependencies": {
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.11",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "node-static": "^0.7.11",
-    "prettier": "^2.8.7",
-    "request": "^2.88.2",
-    "rimraf": "^5.0.0",
-    "ts-mocha": "^10.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0",
+    "yargs": "^17.7.2"
   }
 }
